@@ -1,3 +1,10 @@
+2013-05-22  Edjunior Barbosa Machado  <emachado@linux.vnet.ibm.com>
+
+	* sysdeps/unix/sysv/linux/alpha/bits/siginfo.h (siginfo_t): Add
+	si_trapno and si_addr_lsb to _sifields.sigfault.
+	(si_trapno, si_addr_lsb): Define new macros.
+	(BUS_MCEERR_AR, BUS_MCEERR_AO): Define new values.
+
 2012-12-07  Richard Henderson  <rth@redhat.com>
 
 	* sysdeps/alpha/Makefile [$(subdir) = math]
